Add run configurations